--- a/openai/01_getting_started.ipynb
+++ b/openai/01_getting_started.ipynb
@@ -11,21 +11,7 @@
         }
       },
       "source": [
-        "# OpenAI Quickstart"
-      ]
-    },
-    {
-      "attachments": {},
-      "cell_type": "markdown",
-      "metadata": {
-        "nteract": {
-          "transient": {
-            "deleting": false
-          }
-        }
-      },
-      "source": [
-        "# Overview  \n",
+        "## Overview  \n",
         "\"Large language models are functions that map text to text. Given an input string of text, a large language model tries to predict the text that will come next\"(1). This \"quickstart\" notebook will introduce users to high-level LLM concepts, core package requirements for getting started with AML, an soft introduction to prompt design, and severa short examples of different use cases.  \n",
         "\n",
         "For more quickstart examples please refer to the official Azure Open AI Quickstart Documentation https://learn.microsoft.com/en-us/azure/cognitive-services/openai/quickstart?pivots=programming-language-studio"
@@ -42,7 +28,7 @@
         }
       },
       "source": [
-        "## Table of Contents  \n",
+        "### Table of Contents  \n",
         "\n",
         "[Overview](#overview)  \n",
         "[How to use OpenAI Service](#how-to-use-openai-service)  \n",
@@ -95,7 +81,6 @@
         "\n",
         "![](images/generative-AI-models-reduced.jpg)  \n",
         "\n",
-        "\n",
         "**Steps**:  \n",
         "1. Install OpenAI library in your python environment  \n",
         "2. Load standard helper libraries and set your typical OpenAI security credentials for the OpenAI Service that you've created  \n",
@@ -120,7 +105,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "gather": {
           "logged": 1674254990318
@@ -135,9 +120,17 @@
           }
         }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Note: you may need to restart the kernel to use updated packages.\n"
+          ]
+        }
+      ],
       "source": [
-        "%pip install openai python-dotenv numpy"
+        "%pip install -U openai python-dotenv numpy matplotlib plotly scikit-learn pandas --quiet"
       ]
     },
     {
@@ -156,7 +149,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 19,
       "metadata": {
         "gather": {
           "logged": 1674829434433
@@ -178,7 +171,7 @@
               "True"
             ]
           },
-          "execution_count": 32,
+          "execution_count": 19,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -186,6 +179,7 @@
       "source": [
         "import os\n",
         "import numpy as np\n",
+        "from scipy.spatial.distance import cosine\n",
         "from openai import AzureOpenAI\n",
         "from dotenv import load_dotenv\n",
         "load_dotenv()"
@@ -211,7 +205,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 20,
       "metadata": {
         "gather": {
           "logged": 1674742720788
@@ -229,7 +223,7 @@
       "outputs": [],
       "source": [
         "# Select the General Purpose curie model for text\n",
-        "deployment_name = \"gpt-35-turbo\""
+        "DEPLOYMENT_NAME = \"gpt-35-turbo\""
       ]
     },
     {
@@ -312,7 +306,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 21,
       "metadata": {
         "gather": {
           "logged": 1674494935186
@@ -329,13 +323,14 @@
       },
       "outputs": [
         {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "The use of Oxford commas, also known as serial commas, is a matter of style and can vary depending on the style guide being followed. Some style guides, such as the Associated Press (AP) style, advise against using Oxford commas except when necessary for clarity. Other style guides, such as The Chicago Manual of Style, recommend using Oxford commas to avoid potential ambiguity.\n",
-            "\n",
-            "Ultimately, whether to use Oxford commas or not is a decision that should be made based on the specific style guide you are following or the preference of the person or organization for whom you are writing. Consistency within a document or publication is important, so it is best to choose a specific style and adhere to it throughout the piece.\n"
-          ]
+          "data": {
+            "text/plain": [
+              "\"The use of the Oxford comma, also known as the serial comma, is a matter of style and preference. Some style guides, such as the AP Stylebook, do not require the use of the Oxford comma, while others, like the Chicago Manual of Style and the MLA Handbook, recommend its use to avoid potential ambiguity. Ultimately, the decision to use the Oxford comma should be consistent within a specific writing style or publication. If you are unsure, it's best to consult the appropriate style guide or ask your editor or instructor for guidance.\""
+            ]
+          },
+          "execution_count": 21,
+          "metadata": {},
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -350,7 +345,7 @@
         "    )\n",
         "\n",
         "response = client.chat.completions.create(\n",
-        "  model=deployment_name,\n",
+        "  model=DEPLOYMENT_NAME,\n",
         "  messages = [{\"role\":\"system\", \"content\":\"You are a helpful assistant.\"},\n",
         "               {\"role\":\"user\",\"content\":text_prompt},])\n",
         "\n",
@@ -373,7 +368,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 22,
       "metadata": {
         "gather": {
           "logged": 1674494940872
@@ -390,16 +385,19 @@
       },
       "outputs": [
         {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "The use of the Oxford comma, or the serial comma, is a matter of style and personal preference. Some style guides, such as the AP Stylebook, recommend avoiding it except when it is necessary for clarity. Others, like the Chicago Manual of Style, advocate for its consistent use. Ultimately, it is important to follow the guidelines of the style guide you are using or to be consistent within your own writing.\n"
-          ]
+          "data": {
+            "text/plain": [
+              "'The use of Oxford commas is a matter of style and differs depending on the style guides followed. Some style guides, such as AP Style, do not require the use of Oxford commas, while others, such as the Chicago Manual of Style, do recommend their use. It ultimately depends on the specific style guide being followed or the preferences of the writer or publisher.'"
+            ]
+          },
+          "execution_count": 22,
+          "metadata": {},
+          "output_type": "execute_result"
         }
       ],
       "source": [
         "response = client.chat.completions.create(\n",
-        "  model=deployment_name,\n",
+        "  model=DEPLOYMENT_NAME,\n",
         "  messages = [{\"role\":\"system\", \"content\":\"You are a helpful assistant.\"},\n",
         "               {\"role\":\"user\",\"content\":text_prompt},])\n",
         "\n",
@@ -449,7 +447,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 8,
       "metadata": {
         "gather": {
           "logged": 1674495198534
@@ -466,7 +464,8 @@
       },
       "outputs": [],
       "source": [
-        "prompt = \"Recent work has demonstrated substantial gains on many NLP tasks and benchmarks by pre-training on a large corpus of text followed by fine-tuning on a specific task. While typically task-agnostic in architecture, this method still requires task-specific fine-tuning datasets of thousands or tens of thousands of examples. By contrast, humans can generally perform a new language task from only a few examples or from simple instructions - something which current NLP systems still largely struggle to do. Here we show that scaling up language models greatly improves task-agnostic, few-shot performance, sometimes even reaching competitiveness with prior state-of-the-art fine-tuning approaches.\\n\\nTl;dr\"\n"
+        "PROMPT = \"Recent work has demonstrated substantial gains on many NLP tasks and benchmarks by pre-training on a large corpus of text followed by fine-tuning on a specific task. While typically task-agnostic in architecture, this method still requires task-specific fine-tuning datasets of thousands or tens of thousands of examples. By contrast, humans can generally perform a new language task from only a few examples or from simple instructions - something which current NLP systems still largely struggle to do. Here we show that scaling up language models greatly improves task-agnostic, few-shot performance, sometimes even reaching competitiveness with prior state-of-the-art fine-tuning approaches.\\n\\nTl;dr\"\n",
+        "print(PROMPT)"
       ]
     },
     {
@@ -499,9 +498,9 @@
         "#Setting a few additional, typical parameters during API Call\n",
         "\n",
         "response = client.chat.completions.create(\n",
-        "  model=deployment_name,\n",
+        "  model=DEPLOYMENT_NAME,\n",
         "  messages = [{\"role\":\"system\", \"content\":\"You are a helpful assistant.\"},\n",
-        "               {\"role\":\"user\",\"content\":prompt},])\n",
+        "               {\"role\":\"user\",\"content\":PROMPT},])\n",
         "\n",
         "response.choices[0].message.content"
       ]
@@ -528,7 +527,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 9,
       "metadata": {
         "gather": {
           "logged": 1674499424645
@@ -557,13 +556,13 @@
         }
       ],
       "source": [
-        "prompt = \"Classify the following inquiry into one of the following: categories: [Pricing, Hardware Support, Software Support]\\n\\ninquiry: Hello, one of the keys on my laptop keyboard broke recently and I'll need a replacement:\\n\\nClassified category:\"\n",
-        "print(prompt)"
+        "PROMPT = \"Classify the following inquiry into one of the following: categories: [Pricing, Hardware Support, Software Support]\\n\\ninquiry: Hello, one of the keys on my laptop keyboard broke recently and I'll need a replacement:\\n\\nClassified category:\"\n",
+        "print(PROMPT)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 10,
       "metadata": {
         "gather": {
           "logged": 1674499378518
@@ -580,20 +579,23 @@
       },
       "outputs": [
         {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Hardware Support\n"
-          ]
+          "data": {
+            "text/plain": [
+              "'The category for this inquiry would be \"Hardware Support.\"'"
+            ]
+          },
+          "execution_count": 10,
+          "metadata": {},
+          "output_type": "execute_result"
         }
       ],
       "source": [
         "#Setting a few additional, typical parameters during API Call\n",
         "\n",
         "response = client.chat.completions.create(\n",
-        "  model=deployment_name,\n",
+        "  model=DEPLOYMENT_NAME,\n",
         "  messages = [{\"role\":\"system\", \"content\":\"You are a helpful assistant.\"},\n",
-        "               {\"role\":\"user\",\"content\":prompt},])\n",
+        "               {\"role\":\"user\",\"content\":PROMPT},])\n",
         "\n",
         "response.choices[0].message.content"
       ]
@@ -653,14 +655,13 @@
         }
       ],
       "source": [
-        "prompt = \"Product description: A home milkshake maker\\nSeed words: fast, healthy, compact.\\nProduct names: HomeShaker, Fit Shaker, QuickShake, Shake Maker\\n\\nProduct description: A pair of shoes that can fit any foot size.\\nSeed words: adaptable, fit, omni-fit.\"\n",
-        "\n",
-        "print(prompt)"
+        "PROMPT = \"Product description: A home milkshake maker\\nSeed words: fast, healthy, compact.\\nProduct names: HomeShaker, Fit Shaker, QuickShake, Shake Maker\\n\\nProduct description: A pair of shoes that can fit any foot size.\\nSeed words: adaptable, fit, omni-fit.\"\n",
+        "print(PROMPT)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 11,
       "metadata": {
         "jupyter": {
           "outputs_hidden": false,
@@ -676,10 +677,10 @@
         {
           "data": {
             "text/plain": [
-              "'Product names: FlexFit Shoes, OmniFit Shoes, AdaptShoes, UniversalFit'"
+              "'The classified category for the inquiry is \"Hardware Support.\"'"
             ]
           },
-          "execution_count": 30,
+          "execution_count": 11,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -688,9 +689,9 @@
         "#Setting a few additional, typical parameters during API Call\n",
         "\n",
         "response = client.chat.completions.create(\n",
-        "  model=deployment_name,\n",
+        "  model=DEPLOYMENT_NAME,\n",
         "  messages = [{\"role\":\"system\", \"content\":\"You are a helpful assistant.\"},\n",
-        "               {\"role\":\"user\",\"content\":prompt},])\n",
+        "               {\"role\":\"user\",\"content\":PROMPT},])\n",
         "\n",
         "response.choices[0].message.content"
       ]
@@ -736,25 +737,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
-      "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Note: you may need to restart the kernel to use updated packages.\n"
-          ]
-        }
-      ],
-      "source": [
-        "# Dependencies for embeddings_utils\n",
-        "%pip install matplotlib plotly scikit-learn pandas --quiet"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 14,
       "metadata": {
         "gather": {
           "logged": 1674829424097
@@ -1776,33 +1759,21 @@
               " ...]"
             ]
           },
-          "execution_count": 5,
+          "execution_count": 14,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "from scipy.spatial.distance import cosine\n",
-        "from openai import AzureOpenAI\n",
-        "import os\n",
-        "from dotenv import load_dotenv\n",
-        "load_dotenv()\n",
-        "\n",
-        "client = AzureOpenAI(\n",
-        "    api_key=os.getenv(\"AZURE_OPENAI_KEY\"),  \n",
-        "    api_version=os.getenv(\"OPENAI_API_VERSION\"),\n",
-        "    azure_endpoint = os.getenv(\"AZURE_OPENAI_ENDPOINT\")\n",
-        "    )\n",
-        "\n",
-        "text = 'the quick brown fox jumped over the lazy dog'\n",
-        "model = 'text-embedding-ada-002'\n",
-        "response = client.embeddings.create(input=text, model=model)\n",
+        "TEXT = 'the quick brown fox jumped over the lazy dog'\n",
+        "EMBEDDING_MODEL = 'text-embedding-ada-002'\n",
+        "response = client.embeddings.create(input=TEXT, model=EMBEDDING_MODEL)\n",
         "response.data[0].embedding\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 16,
       "metadata": {
         "gather": {
           "logged": 1674829555255
@@ -1835,10 +1806,10 @@
         "    return np.dot(a, b) / (np.linalg.norm(a) * np.linalg.norm(b))\n",
         "\n",
         "# compare several words\n",
-        "automobile_embedding    = client.embeddings.create(input='automobile', model=model).data[0].embedding\n",
-        "vehicle_embedding       = client.embeddings.create(input='vehicle', model=model).data[0].embedding\n",
-        "dinosaur_embedding      = client.embeddings.create(input='dinosaur', model=model).data[0].embedding\n",
-        "stick_embedding         = client.embeddings.create(input='stick', model=model).data[0].embedding\n",
+        "automobile_embedding    = client.embeddings.create(input='automobile', model=EMBEDDING_MODEL).data[0].embedding\n",
+        "vehicle_embedding       = client.embeddings.create(input='vehicle', model=EMBEDDING_MODEL).data[0].embedding\n",
+        "dinosaur_embedding      = client.embeddings.create(input='dinosaur', model=EMBEDDING_MODEL).data[0].embedding\n",
+        "stick_embedding         = client.embeddings.create(input='stick', model=EMBEDDING_MODEL).data[0].embedding\n",
         "\n",
         "print(cosine_similarity(automobile_embedding, vehicle_embedding))\n",
         "print(cosine_similarity(automobile_embedding, dinosaur_embedding))\n",
@@ -1862,7 +1833,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 17,
       "metadata": {
         "gather": {
           "logged": 1674831122093
@@ -1935,7 +1906,7 @@
               "2  Boy on meeting Spider-Man: \"It was my favorite...  "
             ]
           },
-          "execution_count": 8,
+          "execution_count": 17,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1959,7 +1930,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 18,
       "metadata": {
         "gather": {
           "logged": 1674831294043
@@ -1985,9 +1956,9 @@
         }
       ],
       "source": [
-        "article1_embedding    = client.embeddings.create(input=cnn_df.articles.iloc[0], model=model).data[0].embedding\n",
-        "article2_embedding    = client.embeddings.create(input=cnn_df.articles.iloc[1], model=model).data[0].embedding\n",
-        "article3_embedding    = client.embeddings.create(input=cnn_df.articles.iloc[2], model=model).data[0].embedding\n",
+        "article1_embedding    = client.embeddings.create(input=cnn_df.articles.iloc[0], model=EMBEDDING_MODEL).data[0].embedding\n",
+        "article2_embedding    = client.embeddings.create(input=cnn_df.articles.iloc[1], model=EMBEDDING_MODEL).data[0].embedding\n",
+        "article3_embedding    = client.embeddings.create(input=cnn_df.articles.iloc[2], model=EMBEDDING_MODEL).data[0].embedding\n",
         "\n",
         "print(cosine_similarity(article1_embedding, article2_embedding))\n",
         "print(cosine_similarity(article1_embedding, article3_embedding))"
