--- a/openai/10_dall-e.ipynb
+++ b/openai/10_dall-e.ipynb
@@ -58,7 +58,7 @@
     "json_response = json.loads(result.model_dump_json())\n",
     "\n",
     "# Set the directory for the stored image\n",
-    "image_dir = os.path.join(os.curdir, 'images')\n",
+    "image_dir = os.path.join(os.curdir, 'output')\n",
     "\n",
     "# If the directory doesn't exist, create it\n",
     "if not os.path.isdir(image_dir):\n",
