--- a/rag/06_document_specific_splitting.ipynb
+++ b/rag/06_document_specific_splitting.ipynb
@@ -1059,7 +1059,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you head over to `images/pdfImages/` and check out the images that were parsed.\n",
+    "If you head over to `figures` and check out the images that were parsed.\n",
     "\n",
     "But the images don't do anything sitting in a folder, we need to do something with them! Though a bit outside the scope of chunking, let's talk about how to work with these.\n",
     "\n",
@@ -1070,11 +1070,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "from langchain.chat_models import ChatOpenAI\n",
+    "from langchain_openai import AzureOpenAIEmbeddings, AzureChatOpenAI\n",
     "from langchain.schema.messages import HumanMessage\n",
     "import os\n",
     "from dotenv import load_dotenv\n",
@@ -1094,11 +1105,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "llm = ChatOpenAI(model=\"gpt-4-vision-preview\")"
+    "llm = AzureChatOpenAI(\n",
+    "    azure_endpoint=os.getenv(\"AZURE_OPENAI_ENDPOINT\"),\n",
+    "    openai_api_key=os.getenv(\"AZURE_OPENAI_API_KEY\"),\n",
+    "    openai_api_version=os.getenv(\"OPENAI_API_VERSION\"),\n",
+    "    azure_deployment=\"gpt-4-vision-preview\",\n",
+    "    max_tokens=1024,\n",
+    "    temperature=0,\n",
+    ")\n"
    ]
   },
   {
@@ -1110,7 +1128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1134,14 +1152,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "chat = ChatOpenAI(model=\"gpt-4-vision-preview\",\n",
-    "                  max_tokens=1024)\n",
-    "\n",
-    "msg = chat.invoke(\n",
+    "msg = llm.invoke(\n",
     "    [\n",
     "        HumanMessage(\n",
     "            content=[\n",
@@ -1167,9 +1182,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'The image shows a baking tray with pieces of food that are humorously arranged to resemble a map of the world. The food pieces are uneven and clumpy, mimicking the shapes of continents, but they are not geographically accurate and are more suggestive than precise. The caption above the image reads, \"Sometimes I just look at pictures of the earth from space and I marvel at how beautiful it all is.\" This caption is meant to be ironic, as the image is not actually of the earth from space, but rather a playful and creative representation using food on a baking tray. The overall tone of the image is light-hearted and whimsical.'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "msg.content"
    ]
