Add cosmosdb vector search example

--- a/vector/azure_ai_search.ipynb
+++ b/vector/azure_ai_search.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Vector search in Python (Azure AI Search)\n",
+    "## Storing and querying for embeddings with Azure AI Search\n",
     "\n",
     "This code demonstrates how to use Azure AI Search by using the push API to insert vectors into your search index:\n",
     "\n",
@@ -77,10 +77,11 @@
    "source": [
     "import datetime\n",
     "\n",
-    "resource_group_name = f\"AiSearch\" # change the name to match your naming style\n",
+    "resource_group_name = f\"VectorSearch\" # change the name to match your naming style\n",
     "resource_group_location = \"southeastasia\" # change the location to match your naming style\n",
-    "aisearch_name = f\"aissea\" # change the name to match your naming style\n",
-    "aisearch_sku = f\"basic\" # Accepted values: free, basic, standard, standard2, standard3, storage_optimized_l1, storage_optimized_l2"
+    "aisearch_name = f\"vssea\" # change the name to match your naming style\n",
+    "aisearch_sku = f\"basic\" # Accepted values: free, basic, standard, standard2, standard3, storage_optimized_l1, storage_optimized_l2\n",
+    "aisearch_index_name = 'vsindex'"
    ]
   },
   {
@@ -113,7 +114,7 @@
    "outputs": [],
    "source": [
     "import json\n",
-    "cmd_stdout = ! az search admin-key show -g AiSearch --service-name {aisearch_name}-{suffix}\n",
+    "cmd_stdout = ! az search admin-key show -g {resource_group_name} --service-name {aisearch_name}-{suffix}\n",
     "admin_keys_string = cmd_stdout.n\n",
     "admin_keys = json.loads(admin_keys_string)"
    ]
@@ -142,7 +143,7 @@
     "# The following variables from your .env file are used in this notebook\n",
     "endpoint = f'https://{aisearch_name}-{suffix}.search.windows.net'\n",
     "credential = AzureKeyCredential(admin_keys['primaryKey']) \n",
-    "index_name = 'basic-vector-workflow-index'\n"
+    "\n"
    ]
   },
   {
@@ -150,7 +151,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create embeddings\n",
+    "### Create embeddings\n",
     "Read your data, generate OpenAI embeddings and export to a format to insert your Azure AI Search index:"
    ]
   },
@@ -204,7 +205,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create your search index\n",
+    "### Create your search index\n",
     "\n",
     "Create your search index schema and vector search configuration. If you get an error, check the search service for available quota and check the .env file to make sure you're using a unique search index name."
    ]
@@ -277,7 +278,7 @@
     "semantic_search = SemanticSearch(configurations=[semantic_config])\n",
     "\n",
     "# Create the search index with the semantic settings\n",
-    "index = SearchIndex(name=index_name, fields=fields,\n",
+    "index = SearchIndex(name=aisearch_index_name, fields=fields,\n",
     "                    vector_search=vector_search, semantic_search=semantic_search)\n",
     "result = index_client.create_or_update_index(index)\n",
     "print(f' {result.name} created')\n"
@@ -288,7 +289,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Insert text and embeddings into vector store\n",
+    "### Insert text and embeddings into vector store\n",
     "Add texts and metadata from the JSON data to the vector store:"
    ]
   },
@@ -307,7 +308,7 @@
     "    os.makedirs(output_directory)\n",
     "with open(output_path, 'r') as file:  \n",
     "    documents = json.load(file)  \n",
-    "search_client = SearchClient(endpoint=endpoint, index_name=index_name, credential=credential)\n",
+    "search_client = SearchClient(endpoint=endpoint, index_name=aisearch_index_name, credential=credential)\n",
     "result = search_client.upload_documents(documents)\n",
     "print(f\"Uploaded {len(documents)} documents\") "
    ]
@@ -334,7 +335,7 @@
     "# Use SearchIndexingBufferedSender to upload the documents in batches optimized for indexing  \n",
     "with SearchIndexingBufferedSender(  \n",
     "    endpoint=endpoint,  \n",
-    "    index_name=index_name,  \n",
+    "    index_name=aisearch_index_name,  \n",
     "    credential=credential,  \n",
     ") as batch_client:  \n",
     "    # Add upload actions for all documents  \n",
@@ -347,7 +348,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Perform a vector similarity search"
+    "### Perform a vector similarity search"
    ]
   },
   {
@@ -421,7 +422,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Perform an Exhaustive KNN exact nearest neighbor search"
+    "### Perform an Exhaustive KNN exact nearest neighbor search"
    ]
   },
   {
@@ -460,7 +461,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Perform a Cross-Field Vector Search\n",
+    "### Perform a Cross-Field Vector Search\n",
     "\n",
     "This example shows a cross-field vector search that allows you to query multiple vector fields at the same time. Note, ensure that the same embedding model was used for the vector fields you decide to query."
    ]
@@ -494,7 +495,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Perform a Multi-Vector Search\n",
+    "### Perform a Multi-Vector Search\n",
     "\n",
     "This example shows a cross-field vector search that allows you to query multiple vector fields at the same time by passing in multiple query vectors. Note, in this case, you can pass in query vectors from two different embedding models to the corresponding vector fields in your index."
    ]
@@ -531,7 +532,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Perform a Pure Vector Search with a filter\n",
+    "### Perform a Pure Vector Search with a filter\n",
     "This example shows how to apply filters on your index. Note, that you can choose whether you want to use Pre-Filtering (default) or Post-Filtering."
    ]
   },
@@ -569,7 +570,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Perform a Hybrid Search"
+    "### Perform a Hybrid Search"
    ]
   },
   {
@@ -603,7 +604,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Perform a Semantic Hybrid Search"
+    "### Perform a Semantic Hybrid Search"
    ]
   },
   {
