Add cosmosdb for mongodb vcore vector example

--- a/vector/cosmos_db_nosql.ipynb
+++ b/vector/cosmos_db_nosql.ipynb
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,9 +77,9 @@
     "\n",
     "resource_group_name = \"VectorSearch\" # change the name to match your naming style\n",
     "resource_group_location = \"southeastasia\" # change the location to match your naming style\n",
-    "cosmosdb_account_name = \"vssea\" # cosmos db for nosql account name,  change the name to match your naming style\n",
-    "cosmosdb_db_name = \"vsdb\" # cosmos db for nosql database name,  change the name to match your naming style\n",
-    "cosmosdb_container_name = \"vsc\" # cosmos db for nosql container name,  change the name to match your naming style"
+    "account_name = \"nosqlvssea\" # cosmos db for nosql account name,  change the name to match your naming style\n",
+    "db_name = \"vsdb\" # cosmos db for nosql database name,  change the name to match your naming style\n",
+    "container_name = \"vsc\" # cosmos db for nosql container name,  change the name to match your naming style"
    ]
   },
   {
@@ -97,12 +97,12 @@
     "cmd_stdout = ! echo -n {resource_group_name} | sha1sum | head -c 6\n",
     "suffix = cmd_stdout.n\n",
     "\n",
-    "cosmosdb_stdout = ! az cosmosdb create -n {cosmosdb_account_name}-{suffix} -g {resource_group_name} --default-consistency-level Eventual --capabilities EnableServerless EnableNoSQLVectorSearch\n",
+    "cmd_stdout = ! az cosmosdb create -n {account_name}-{suffix} -g {resource_group_name} --default-consistency-level Eventual --capabilities EnableServerless EnableNoSQLVectorSearch\n",
     "\n",
-    "if cosmosdb_stdout.n.startswith(\"ERROR\"):\n",
-    "    print(cosmosdb_stdout)\n",
+    "if cmd_stdout.n.startswith(\"ERROR\"):\n",
+    "    print(cmd_stdout)\n",
     "else:\n",
-    "    print(\"✅ Cosmos DB \", f'{cosmosdb_account_name}-{suffix}', \" created ⌚ \", datetime.datetime.now().time())\n"
+    "    print(\"✅ Cosmos DB \", f'{account_name}-{suffix}', \" created ⌚ \", datetime.datetime.now().time())\n"
    ]
   },
   {
@@ -113,14 +113,15 @@
    "source": [
     "endpoint_stdout = ! az cosmosdb show -g {resource_group_name} -n {cosmosdb_name}-{suffix} --query documentEndpoint --output tsv\n",
     "key_stdout = ! az cosmosdb keys list -g {resource_group_name} -n {cosmosdb_name}-{suffix} --query primaryMasterKey --output tsv\n",
-    "endpoint = endpoint_stdout.nkey = key_stdout.n"
+    "endpoint = endpoint_stdout.n\n",
+    "key = key_stdout.n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create Cosmos DB for NoSQL database and container"
+    "### Create Cosmos DB for NoSQL database and container"
    ]
   },
   {
@@ -134,9 +135,9 @@
     "exceptions\n",
     "client = CosmosClient(endpoint, credential=key)\n",
     "try:\n",
-    "    database = client.create_database(cosmosdb_db_name)\n",
+    "    database = client.create_database(db_name)\n",
     "except exceptions.CosmosResourceExistsError:\n",
-    "    database = client.get_database_client(cosmosdb_db_name)\n",
+    "    database = client.get_database_client(db_name)\n",
     "\n",
     "vector_embedding_policy = {\n",
     "    \"vectorEmbeddings\": [ \n",
@@ -182,11 +183,11 @@
     "\n",
     "try:\n",
     "    container = database.create_container_if_not_exists( \n",
-    "                    id=cosmosdb_container_name, \n",
+    "                    id=container_name, \n",
     "                    partition_key=PartitionKey(path='/id'), \n",
     "                    indexing_policy=indexing_policy, \n",
     "                    vector_embedding_policy=vector_embedding_policy) \n",
-    "    print('Container with id \\'{0}\\' created'.format(cosmosdb_container_name)) \n",
+    "    print('Container with id \\'{0}\\' created'.format(container_name)) \n",
     "\n",
     "except exceptions.CosmosHttpResponseError: \n",
     "    raise"
@@ -324,6 +325,20 @@
     "        ], \n",
     "        enable_cross_partition_query=True): \n",
     "    print(json.dumps(item, indent=True)) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "delete_stdout = ! az group delete --name {resource_group_name} -y\n",
+    "\n",
+    "if delete_stdout.n.startswith(\"ERROR\"):\n",
+    "    print(delete_stdout)\n",
+    "else:\n",
+    "    print(\"✅ Azure Resource Grpup \", resource_group_name, \" deleted ⌚ \", datetime.datetime.now().time())\n"
    ]
   }
  ],
