Add cosmos db for mongodb vcore vector example

--- a/vector/cosmos_db_for_mongodb_vcore.ipynb
+++ b/vector/cosmos_db_for_mongodb_vcore.ipynb
@@ -83,7 +83,7 @@
     "server_version=\"6.0\" # 5.0 6.0\n",
     "collection_name = \"vsc\"\n",
     "admin_username = \"azadmin\" # change the name to match your naming style\n",
-    "cmd_stdout = ! openssl rand -base64 12\n",
+    "cmd_stdout = ! < /dev/urandom tr -dc 'A-Za-z0-9' | head -c12; echo\n",
     "admin_password = cmd_stdout.n\n",
     "cmd_stdout = ! echo -n {resource_group_name} | sha1sum | head -c 6\n",
     "cluster_name = \"mgovs-\" +  cmd_stdout.n # cosmos db for mongodb account name,  change the name to match your naming style\n",
@@ -152,7 +152,6 @@
     "load_dotenv()\n",
     "\n",
     "client = AzureOpenAI(\n",
-    "    azure_deployment=\"text-embedding-ada-002\",\n",
     "    api_key=os.getenv(\"AZURE_OPENAI_API_KEY\"),  \n",
     "    api_version=os.getenv(\"OPENAI_API_VERSION\"),\n",
     "    azure_endpoint=os.getenv(\"AZURE_OPENAI_ENDPOINT\")\n",
@@ -358,12 +357,12 @@
    "source": [
     "# Add a filter index\n",
     "db.command( {\n",
-    "    \"createIndexes\": \"ExampleCollection\",\n",
+    "    \"createIndexes\": collection_name,\n",
     "    \"indexes\": [ {\n",
     "        \"key\": { \n",
     "            \"title\": 1 \n",
     "               }, \n",
-    "        \"name\": \"title_filter\" \n",
+    "        \"name\": \"titleFilterIndex\" \n",
     "    }\n",
     "    ] \n",
     "} \n",
@@ -384,7 +383,7 @@
     "                    \"vector\": query_embedding,\n",
     "                    \"path\": \"contentVector\",\n",
     "                    \"k\": num_results,\n",
-    "                    \"filter\": {\"title\": {\"$nin\": [\"Azure SQL Database\", \"Azure Database for MySQL\"]}}\n",
+    "                    \"filter\": {\"title\": {\"$nin\": [\"Azure App Service\"]}}\n",
     "                },\n",
     "                \"returnStoredSource\": True }},\n",
     "        {'$project': { 'similarityScore': { '$meta': 'searchScore' }, 'document' : '$$ROOT' } }\n",
@@ -392,7 +391,7 @@
     "    results = collection.aggregate(pipeline)\n",
     "    return results\n",
     "\n",
-    "query = \"What are some NoSQL databases in Azure?\"#\"What are the services for running ML models?\"\n",
+    "query = \"What is Azure App Service?\"#\"What are the services for running ML models?\"\n",
     "results = filtered_vector_search(query)\n",
     "for result in results: \n",
     "#     print(result)\n",
@@ -433,7 +432,7 @@
     "    for item in vector_search_results:\n",
     "        messages.append({\"role\": \"system\", \"content\": item['document']['content']})\n",
     "    messages.append({\"role\": \"user\", \"content\": user_prompt})\n",
-    "    response = AOAI_client.chat.completions.create(model=config['openai_completions_deployment'], messages=messages,temperature=0)\n",
+    "    response = client.chat.completions.create(model='gpt-35-turbo', messages=messages,temperature=0)\n",
     "    \n",
     "    return response.dict()"
    ]
@@ -459,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,7 +467,7 @@
     "if delete_stdout.n.startswith(\"ERROR\"):\n",
     "    print(delete_stdout)\n",
     "else:\n",
-    "    print(\"✅ Azure Resource Grpup \", resource_group_name, \" deleted ⌚ \", datetime.datetime.now().time())\n"
+    "    print(\"✅ Azure Resource Grpup \", resource_group_name, \" deleted ⌚ \", datetime.datetime.now().time())"
    ]
   }
  ],
